# seawings_nodes

./: .gitignore  Diagrams explaining nodes  README.md  test_scenarios.md
diagrams/: README_diagrams.md
install/: local_setup.sh  setup.sh
install/px4_msgs/share/ament_index/resource_index/parent_prefix_path/: px4_msgs
install/px4_msgs/share/px4_msgs/: package.sh
install/seawings_mission_management/lib/seawings_mission_management/: fault_detector  mission_supervisor  power_monitor
install/seawings_mission_management/share/seawings_mission_management/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/seawings_mission_management/share/seawings_mission_management/config/: mission_params.yaml
install/seawings_mission_management/share/seawings_mission_management/launch/: seawings_mission.launch.py  seawings_mission_v2.launch.py
log/: latest_build  latest_list
src/seawings_mission_management/: README.md  package.xml  setup.cfg  setup.py
src/seawings_mission_management/config/: mission_params.yaml
src/seawings_mission_management/launch/: seawings_mission.launch.py
src/seawings_mission_management/scripts/: test_battery_failure.py  test_gps_failure.py
src/seawings_mission_management/seawings_mission_management/: fault_detector.py  fault_detector_v2.py  misison_supervisor.py  misison_supervisor_v2.py  mission_supervisor.py  power_monitor.py
